Перезапуск под новую логику
